# agents

./: .gitignore  Dockerfile  Dockerfile.worker  api.txt  db.txt  docker-compose.debug.yml  docker-compose.yml  flower.txt  generate_project.py  grafana.txt  image.py  locals.sh  prometheus.txt  rabbitmq.txt  redis.txt  requirements.txt
aws-bedrock-setup/terraform/: iam.tf  main.tf  outputs.tf  providers.tf  variables.tf
multiagent/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_redis.py
multiagent-llm-system/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
multiagent-llm-system/.devcontainer/: Dockerfile  devcontainer.json
multiagent-llm-system/app/: __init__.py  main.py
multiagent-llm-system/app/agents/: base.py
multiagent-llm-system/app/api/: __init__.py
multiagent-llm-system/app/api/endpoints/: __init__.py  agents.py  deps.py  error_handlers.py  health.py
multiagent-llm-system/app/core/: config.py  security.py
multiagent-llm-system/app/db/crud/: __init__.py  base.py  results.py
multiagent-llm-system/app/monitoring/: __init__.py  tracer.py
multiagent-llm-system/app/schemas/: __init__.py  agent.py  response.py  workflow.py
multiagent-llm-system/app/tools/: serper.py
multiagent-llm-system/app/vector_db/: __init__.py
multiagent-llm-system/app/worker/: __init__.py  celery_app.py  tasks.py
multiagent-llm-system/infra/terraform/: variables.tf
multiagent/.devcontainer/: devcontainer.json
multiagent/agents/: researcher.py
multiagent/app/: main.py
multiagent/app/agents/: __init__.py  (+5 more)
prometheus/: prometheus.yaml
scripts/: migrate.sh
(+77 files in other folders)
